fix: horizontal scroll

--- a/crates/frontend/styles/tailwind.css
+++ b/crates/frontend/styles/tailwind.css
@@ -88,6 +88,10 @@
     min-width: 12rem;
 }
 
+.max-w-106 {
+    max-width: 26.5rem;
+}
+
 .text-wrap {
     text-wrap: wrap;
 }
